# lingmo-motion

./: CMakeLists.txt  README.md
.github/workflows/: package.yml
debian/: changelog  control  copyright  liblingmomotion-dev.install  liblingmomotion1.install
include/lingmo-motion/: export.h  springanimation.h
rpm/: lingmo-motion.spec
src/: main.cpp  springanimation.cpp
tests/: CMakeLists.txt  test_springanimation.cpp
